[gd_scene load_steps=5 format=2]

[ext_resource path="res://gameplay/objects/powerups/MegaHook.gd" type="Script" id=1]
[ext_resource path="res://assets/images/elements/megahook.png" type="Texture" id=2]
[ext_resource path="res://assets/sound/sfx/drill.wav" type="AudioStream" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 20.0

[node name="MegaHook" type="Node2D"]
script = ExtResource( 1 )
power_name = "MegaHooooook!"

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 4.77306, -0.412826 )
scale = Vector2( 0.27, 0.27 )
texture = ExtResource( 2 )

[node name="HookArea" type="Area2D" parent="."]
collision_layer = 512
collision_mask = 77

[node name="CollisionShape2D" type="CollisionShape2D" parent="HookArea"]
shape = SubResource( 1 )
disabled = true

[node name="ShootSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
[connection signal="area_entered" from="HookArea" to="." method="_on_MegaHookArea_area_entered"]
